# LearningFastAPI

./: .gitignore  Makefile  app copy.py  pyproject.toml
app/: main.py  schemas.py  yolo_service.py
frontend/: app.py
